--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
     <link rel="stylesheet" href="./css/modern-normalize.min.css">
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
@@ -101,7 +101,7 @@
                 </form>
             </div>
         </div>
-        <script>
+        <!-- <script>
             const refs = {
                 openModalBtn: document.querySelector("[data-open-modal]"),
                 closeModalBtn: document.querySelector("[data-close-modal]"),
@@ -120,8 +120,8 @@
             function logBackdropClick() {
                     console.log("Это клик в бекдроп");
             }
-        </script>
-        <script>
+        </script> -->
+        <!-- <script>
             (() => {
                 document
                     .querySelector('.js-speaker-form')
@@ -133,7 +133,7 @@
                         e.currentTarget.reset();
                     });
             })();
-        </script>
+        </script> -->
     </section>
     
     <!-- Особенности-->
@@ -434,5 +434,8 @@
         </div>
     </div>
 </footer>
+<script src="./js/menu.js"></script> 
+<script src="./js/modal.js"></script> 
+<script src="./js/smth-more.js"></script> 
 </body>
 </html> 
