Working with footer

--- a/index.html
+++ b/index.html
@@ -212,22 +212,22 @@
                         <h3 class="team-list__name">Игорь Демьяненко</h3>
                         <p class="team-list__speciality">Product Designer</p>
                         <ul class="social-links">
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
@@ -242,22 +242,22 @@
                         <h3 class="team-list__name">Ольга Репина</h3>
                         <p class="team-list__speciality">Frontend Developer</p>
                         <ul class="social-links">
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
@@ -271,22 +271,22 @@
                         <h3 class="team-list__name">Николай Тарасов</h3>
                         <p class="team-list__speciality">Marketing</p>
                         <ul class="social-links">
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
@@ -300,22 +300,22 @@
                         <h3 class="team-list__name">Михаил Ермаков</h3>
                         <p class="team-list__speciality">UI Designer</p>
                         <ul class="social-links">
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#instagram"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#twitter"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#facebook"></use>
                                     </svg>
                                 </a></li>
-                            <li><a href="" class="social-links__link">
+                            <li class="social-links-item"><a href="" class="social-links__link">
                                     <svg width="20" height="20">
                                         <use href="./images/sprite.svg#linkedin"></use>
                                     </svg>
@@ -374,7 +374,7 @@
     <!-- Подвал-->
 <footer class="footer--unlimited">
     <div class="container footer">
-        <div class="footer__left-part">
+        <div class="footer__item">
         <a href="./index.html">
             <p class="logo logo--bottom">
             <span class="logo__text">Web</span>Studio</p>
@@ -389,28 +389,27 @@
                     <a class="footer-contacts__link" href="tel:+380991111111">+38 099 111 11 11</a> </li>
             </ul>
         </address>
-
         </div>
 
-        <div class="footer__сenter-part">
+        <div class="footer__item">
             <h3 class="footer__invitation">Присоединяйтесь</h3>
             <ul class="social-links social-links--footerish">
-                <li><a href="" class="social-links__link">
+                <li class="social-links-item"><a href="" class="social-links__link">
                     <svg width="20" height="20">
                         <use href="./images/sprite.svg#instagram"></use>
                     </svg>
                 </a></li>
-            <li><a href="" class="social-links__link">
+                <li class="social-links-item"><a href="" class="social-links__link">
                     <svg width="20" height="20">
                         <use href="./images/sprite.svg#twitter"></use>
                     </svg>
                 </a></li>
-            <li><a href="" class="social-links__link">
+                <li class="social-links-item"><a href="" class="social-links__link">
                     <svg width="20" height="20">
                         <use href="./images/sprite.svg#facebook"></use>
                     </svg>
                 </a></li>
-            <li><a href="" class="social-links__link">
+                <li class="social-links-item"><a href="" class="social-links__link">
                     <svg width="20" height="20">
                         <use href="./images/sprite.svg#linkedin"></use>
                     </svg>
@@ -418,7 +417,7 @@
             </ul>
         </div>
 
-        <div class="footer__right-part">
+        <div class="footer__item">
             <h3 class="footer__invitation">Подпишитесь на рассылку</h3>
             <form class="form-submit">
                 <label>
