Header and footer main looklike

--- a/index.html
+++ b/index.html
@@ -386,8 +386,8 @@
     <!-- Подвал-->
 <footer class="footer--unlimited">
     <div class="container footer">
-        <ul class="footer__list">
-        <li class="footer__item">
+        <ul class="footer-list">
+        <li class="footer-list__item">
              <a href="./index.html">
                 <p class="logo logo--bottom">
                 <span class="logo__text">Web</span>Studio</p>
@@ -404,7 +404,7 @@
             </address>
         </li>
 
-        <li class="footer__item">
+        <li class="footer-list__item">
             <h3 class="footer__invitation">Присоединяйтесь</h3>
             <ul class="social-links social-links--footerish">
                 <li class="social-links-item"><a href="" class="social-links__link">
@@ -430,7 +430,7 @@
             </ul>
         </li>
 
-        <li class="footer__item">
+        <li class="footer-list__item">
             <h3 class="footer__invitation">Подпишитесь на рассылку</h3>
             <form class="form-submit">
                 <label>
