Last commit for 15.01

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <button type="button" class="menu-button"    aria-expanded="false" aria-controls="menu-container" 
         data-menu-button>
             <svg width="40" height="40" aria-label="Переключатель мобильного меню">
-                <use class="icon-menu" href="./images/sprite.svg#menu"></use>
                 <use class="icon-close" href="./images/sprite.svg#close"></use>
+                <use class="icon-menu" href="./images/sprite.svg#menu"></use>
             </svg>
-        </button>       
-        <div class="navigation-adaptive" id="menu-container" data-menu> 
+        </button> 
+              
+        <div class="menu-container" id="menu-container" data-menu> 
             <ul class="site-nav">
                 <li class="site-nav__item">
                     <a href="./index.html" class="site-nav__link selected-page">Студия</a></li>
