--- a/portfolio.html
+++ b/portfolio.html
@@ -12,41 +12,44 @@
 <body>
     <!-- Верхняя линия-->
     <header class="page-header">
-        <nav class="container navigation">  
-          <a href="./index.html">
-              <p class="logo"><span class="logo__text">Web</span>Studio</p>
-          </a>
-          <button type="button" class="menu-button"    aria-expanded="false" aria-controls="menu-container" 
-          data-menu-button>
-              <svg width="40" height="40" aria-label="Переключатель мобильного меню">
-                  <use class="icon-menu" href="./images/sprite.svg#menu"></use>
-                  <use class="icon-close" href="./images/sprite.svg#close"></use>
-              </svg>
-          </button>       
-          <div class="navigation-adaptive" id="menu-container" data-menu> 
-              <ul class="site-nav">
-                  <li class="site-nav__item">
-                      <a href="./index.html" class="site-nav__link">Студия</a></li>
-                  <li class="site-nav__item">
-                      <a href="./portfolio.html" class="site-nav__link selected-page">Портфолио</a ></li>
-                  <li class="site-nav__item">
-                      <a href="" class="site-nav__link">Контакты</a ></li>
-              </ul>
-              <ul class="contact-nav">
-                  <li class="contact-nav__item"><a href="mailto:info@devstudio.com" class="contact-nav__link">
-                      <svg class="contact-nav__icon" width="16" height="12">
-                      <use href="./images/sprite.svg#envelope"></use>
-                      </svg>
-                      <span>info@devstudio.com</span></a></li>
-                  <li class="contact-nav__item"><a href="tel:+380961111111" class="contact-nav__link">
-                      <svg class="contact-nav__icon" width="10" height="16">
-                          <use href="./images/sprite.svg#smartphone"></use>
-                      </svg>
-                      <span>+38 096 111 11 11</span></a></li>
-              </ul>
-              </div>
+        <nav class="container navigation">
+            <a href="./index.html">
+                <p class="logo"><span class="logo__text">Web</span>Studio</p>
+            </a>
+            <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+                <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+                    <use class="icon-close" href="./images/sprite.svg#close"></use>
+                    <use class="icon-menu" href="./images/sprite.svg#menu"></use>
+                </svg>
+            </button>
+    
+            <div class="menu-container" id="menu-container" data-menu>
+                <ul class="site-nav">
+                    <li class="site-nav__item">
+                        <a href="./index.html" class="site-nav__link">Студия</a>
+                    </li>
+                    <li class="site-nav__item">
+                        <a href="./portfolio.html" class="site-nav__link selected-page">Портфолио</a>
+                    </li>
+                    <li class="site-nav__item">
+                        <a href="" class="site-nav__link">Контакты</a>
+                    </li>
+                </ul>
+                <ul class="contact-nav">
+                    <li class="contact-nav__item"><a href="mailto:info@devstudio.com" class="contact-nav__link">
+                            <svg class="contact-nav__icon" width="16" height="12">
+                                <use href="./images/sprite.svg#envelope"></use>
+                            </svg>
+                            <span>info@devstudio.com</span></a></li>
+                    <li class="contact-nav__item"><a href="tel:+380961111111" class="contact-nav__link">
+                            <svg class="contact-nav__icon" width="10" height="16">
+                                <use href="./images/sprite.svg#smartphone"></use>
+                            </svg>
+                            <span>+38 096 111 11 11</span></a></li>
+                </ul>
+            </div>
         </nav>
-      </header>
+    </header>
 
     <!-- Наполнение страницы-->
     <main class="container">
@@ -254,6 +257,8 @@
             </ul>
         </div>
     </footer>
+<script src="./js/menu-button.js"></script>
+<script src="./js/menu-modal.js"></script>
 </body>
 
 </html>
