--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
    <main>
     <!-- Герой-->
     <section>
-        <div class="container hero">
+        <div class="hero">
         <h1 class="hero__title">Эффективные решения <br> для вашего бизнеса</h1>
         <button data-open-modal type="button" class="hero__button">Заказать услугу</button>
         </div>
